hphp/test/slow/await_as_an_expression/error/pipe1.php.expectf

Fatal error: `await` cannot be used as an expression right of a pipe operator. in %s/pipe1.php on line 5
